<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout12"
            android:layout_width="196dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmailUnidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_unidade"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout11"
            android:layout_width="196dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTelefoneFixo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_unidade"
                android:inputType="phone"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout21"
            android:layout_width="403dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNomeComandante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_comandante"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout14"
            android:layout_width="196dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editFuncaoCmd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/funcao"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout13"
            android:layout_width="196dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPhoneCmd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefone_cmd"
                android:inputType="phone"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout22"
            android:layout_width="403dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNomeScmd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_scmd"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout16"
            android:layout_width="196dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editFuncaoScmd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/funcao_scmd"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout15"
            android:layout_width="196dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPhoneScmd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editPhoneScmd"
                android:inputType="phone"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout23"
            android:layout_width="403dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNome3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/outro_nome"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout9"
            android:layout_width="196dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editfuncao3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/funcao_terceiro"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout17"
            android:layout_width="195dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPhone3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_terceiro"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout24"
            android:layout_width="403dp"
            android:layout_height="52dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco_unidade"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout19"
            android:layout_width="196dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bairro"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout8"
            android:layout_width="196dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_cidade"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>
