<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditarUnidadeActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout20"
        android:layout_width="403dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNomeUnidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_unidade"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout12"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout21"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout11"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmailUnidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_unidade"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout11"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout21"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTelefoneFixo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_unidade"
            android:inputType="phone"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout21"
        android:layout_width="403dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNomeComandante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_comandante"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout14"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout22"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout13"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFuncaoCmd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/funcao"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout13"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout22"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPhoneCmd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefone_cmd"
            android:inputType="phone"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout22"
        android:layout_width="403dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNomeScmd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_scmd"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout16"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout23"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout15"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFuncaoScmd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/funcao_scmd"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout15"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout23"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPhoneScmd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editPhoneScmd"
            android:inputType="phone"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout23"
        android:layout_width="403dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNome3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/outro_nome"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout24"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout17"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editfuncao3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/funcao_terceiro"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout17"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout24"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPhone3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_terceiro"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout24"
        android:layout_width="403dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/endereco_unidade"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout19"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/bt_editarId"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bairro"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="196dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/bt_editarId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout19">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_cidade"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageViewUnidade"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/brasao_cipm"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageViewUnidade"
        app:layout_constraintEnd_toStartOf="@+id/circleImageViewUnidade"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/circleImageViewUnidade"
        app:srcCompat="@drawable/ic_photo_camera_azul_24dp" />

    <ImageButton
        android:id="@+id/imageButtonGaleria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageViewUnidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/circleImageViewUnidade"
        app:layout_constraintTop_toTopOf="@+id/circleImageViewUnidade"
        app:srcCompat="@drawable/ic_photo_library_azul_24dp" />

    <Button
        android:id="@+id/bt_editarId"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/botao_editar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>